tests/errors/syn.missing-rsquare.arr-type.or
main :: () -> void {
    arr :: [5;
};
